# Trie-Search-Bar

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  note.md  preference.txt
src/: main.cpp
src/controller/: app.cpp  app.hpp
src/model/: CompressedTrie.cpp  CompressedTrie.hpp  LRUCache.cpp  LRUCache.hpp  timer.cpp  trie.cpp  trie.hpp
src/view/: Base.cpp  Base.hpp  Button.cpp  Button.hpp  DropdownBox.cpp  DropdownBox.hpp  ResultTab.cpp  ResultTab.hpp  SearchBar.cpp  SearchBar.hpp  SettingTab.cpp  SettingTab.hpp  TextField.cpp  TextField.hpp  Theme.cpp  Theme.hpp
